# hypercraft

./: .dockerignore  .env.example  .gitignore  README.md  dev.cmd  dev.ps1  docker-compose.yml  icon.af  install.ps1  install.sh
.claude/: settings.local.json
.github/workflows/: build.yml
backend/: .env.example  .gitignore  Cargo.toml
backend/hypercraft-api/: Cargo.toml
backend/hypercraft-api/src/: main.rs
backend/hypercraft-api/src/app/: error.rs  middleware.rs  mod.rs  rate_limit.rs  router.rs  state.rs  tests.rs  web_gateway.rs
backend/hypercraft-api/src/app/handlers/: agent.rs  api_keys.rs  attach.rs  auth.rs  groups.rs  health.rs  logs.rs  mod.rs  services.rs  stats.rs  two_factor.rs  users.rs  web.rs
backend/hypercraft-cli/: Cargo.toml
backend/hypercraft-cli/src/: client.rs  main.rs
backend/hypercraft-cli/src/ops/: attach.rs  logs.rs  mod.rs  output.rs  shell.rs  ui.rs  users.rs
backend/hypercraft-cli/src/ops/services/: create.rs  lifecycle.rs  mod.rs  schedule.rs
backend/hypercraft-core/: Cargo.toml
backend/hypercraft-core/src/: error.rs  lib.rs  manifest.rs  models.rs  web.rs
backend/hypercraft-core/src/manager/: attach.rs  groups.rs  lifecycle.rs  logs.rs  mod.rs  policy.rs  process.rs  scheduler.rs  signal.rs  stats.rs  storage.rs
backend/hypercraft-core/src/user/: api_key.rs  auth.rs  crypto.rs  encryption.rs  manager.rs  mod.rs  models.rs  password.rs  permissions.rs  totp.rs
docker/: Dockerfile.api  Dockerfile.web  entrypoint-web.sh
web/: .env.example  .npmrc  global.d.ts  next.config.ts  package.json  pnpm-lock.yaml
web/app/: globals.css  globals.css.bak  layout.tsx  page.tsx
web/app/api-keys/: page.tsx
web/app/api-keys/components/: api-key-card.tsx  api-key-row.tsx  copy-text.ts  create-api-key-modal.tsx  edit-api-key-modal.tsx  revoke-api-key-modal.tsx  secret-reveal-modal.tsx
web/app/api-test/: agent-endpoints.ts  page.tsx
web/app/api-test/components/: control-confirm-modal.tsx  endpoint-list.tsx  response-panel.tsx
web/app/api-test/lib/: agent-fetch.ts
web/app/login/: page.tsx
web/app/profile/: page.tsx
web/app/profile/components/: account-panel.tsx  index.ts  password-panel.tsx  profile-sidebar.tsx  security-panel.tsx
web/app/services/: local-order.ts  page.tsx
web/app/services/[id]/: page.tsx
web/app/services/[id]/components/: browser-panel.tsx  config-panel.tsx  logs-panel.tsx  quick-commands.tsx  terminal-panel.tsx
web/app/services/components/: batch-command-modal.tsx  delete-group-modal.tsx  delete-service-modal.tsx  group-card.tsx  group-color-picker.tsx  group-form-modal.tsx  group-manage-modal.tsx  group-masonry.tsx  group-select-popover.tsx  grouped-services-view.tsx  service-card.tsx  sortable-group-item.tsx  stop-service-popover.tsx  tag-color-picker.tsx  tag-edit-popover.tsx  tag-filter.tsx  tag-utils.ts
web/app/services/components/mobile/: group-select-modal.tsx  tag-edit-modal.tsx
web/app/services/components/service-form/: basic-fields.tsx  command-fields.tsx  env-vars-fields.tsx  options-fields.tsx  schedule-fields.tsx  service-form-modal.tsx  types.ts  use-service-form.ts
web/app/users/: page.tsx
web/app/users/components/: create-user-modal.tsx  delete-user-modal.tsx  edit-user-modal.tsx  service-permission-picker.tsx  service-permission-summary.tsx  user-card.tsx  user-row.tsx
web/components/: header.tsx  resource-card.tsx  stat-card.tsx  theme-switch.tsx
web/components/auth/: setup-2fa-dialog.tsx  verification-code-dialog.tsx
web/components/layout/: page-layout.tsx
web/components/mobile/: mobile-nav.tsx  side-drawer.tsx
web/components/ui/: alert.tsx  button.tsx  checkbox.tsx  command-menu.tsx  count-badge.tsx  dropdown.tsx  file-upload.tsx  form-dialog.tsx  input.tsx  menu-item.tsx  modal.tsx  notification.tsx  popover.tsx  search-field.tsx  section-header.tsx  select.tsx  service-status.tsx  switch.tsx  tab-menu-horizontal.tsx  tag.tsx  textarea.tsx  tooltip.tsx
web/hooks/: use-notification.ts  use-terminal.ts  use-xterm.ts
web/lib/: favorites.ts  format.ts  process-stats-context.tsx  services-context.tsx
web/lib/api/: client.ts  index.ts  types.ts
web/lib/auth/: auth-context.tsx
web/public/: config.js
