[workspace]
members = [
    "hypercraft-core",
    "hypercraft-api",
    "hypercraft-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Hypercraft Contributors"]

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "signal", "process", "fs", "io-util", "io-std", "time", "sync"] }
axum = { version = "0.7", features = ["macros", "json", "ws"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
sysinfo = { version = "0.30", features = ["serde"] }
fs2 = "0.4"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde_with = "3.9"
futures = "0.3"
directories = "5.0"
tempfile = "3.10"
tokio-stream = "0.1"
async-stream = "0.3"
dialoguer = "0.11"
shell-words = "1.1"
dotenvy = "0.15"
tokio-tungstenite = "0.24"
http = "1.1"
crossterm = "0.27"
encoding_rs = "0.8"
base64 = "0.22"
rustyline = "15.0"
dirs-next = "2.0"
jsonwebtoken = "9.3"
bcrypt = "0.16"
tokio-cron-scheduler = "0.13"
cron = "0.13"
subtle = "2.6"
