[package]
name = "hypercraft-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
futures.workspace = true
dotenvy.workspace = true
hypercraft-core = { path = "../hypercraft-core" }
sysinfo.workspace = true
base64.workspace = true
jsonwebtoken.workspace = true
urlencoding = "2.1"
subtle.workspace = true
cron.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
tower.workspace = true
