[package]
name = "hypercraft-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
dialoguer.workspace = true
shell-words.workspace = true
hypercraft-core = { path = "../hypercraft-core" }
tokio-tungstenite.workspace = true
http.workspace = true
crossterm.workspace = true
scopeguard = "1.2"
base64.workspace = true
rustyline.workspace = true
dirs-next.workspace = true
dotenvy = "0.15"
