[package]
name = "hypercraft-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sysinfo.workspace = true
fs2.workspace = true
uuid.workspace = true
chrono.workspace = true
serde_with.workspace = true
futures.workspace = true
tokio-stream.workspace = true
async-stream.workspace = true
encoding_rs.workspace = true
portable-pty = "0.8"
jsonwebtoken.workspace = true
bcrypt.workspace = true
vte = "0.14"
cron.workspace = true
totp-rs = "5.6"
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
urlencoding = "2.1"

[dev-dependencies]
tempfile.workspace = true
